Replace immutable-list with list